--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,9 +2,9 @@ name: Deploy Project
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "workflow_dispatch" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "workflow_dispatch" ]
 
 jobs:
   build:
