--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,9 +2,11 @@ name: Deploy Project
 
 on:
   push:
-    branches: [ "main", "workflow_dispatch" ]
+    branches: [ "main"]
   pull_request:
-    branches: [ "main", "workflow_dispatch" ]
+    branches: [ "main" ]
+  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
   build:
